cleanup, use 80% of free mem, more GC details, and switch to G1GC from CMS